Update several things for 2023.3.0
Add @SuppressWarnings("unused") to several files.

General code cleanup.

Drivetrains now use a generic `Gyro` in instead of requiring `NavX`.

DrivetrainConfig.java is now a record instead of a class.

HolonomicDrivetrain now has a fromFieldSpeeds method.

Delete SwerveSim.java and frc.team1891.common.drivetrains.sim package, since it doesn't work and I don't have plans to make it work.

Drivetrain now has a protected boolean smartDashboardEnabled that can be used by inheriting drivetrains.

SwerveDrivetrain now hides most of its SmartDashboard data behind the above mentioned boolean.

Add frc.team1891.common.hardware.lazy package.  Each class in this package overrides some sort of set method to reduce strain on the CAN bus.

Add Limelight.java. This helper class wraps the NetworkTables used by Limelight into a more intuitive structure.